--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,61 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  color: white;
+  background-color: rgb(15, 15, 15);
+  height: 100%;
+}
+
+h2 {
+  padding-top: 12px;
+}
+
+ul {
+  width: 850px;
+  display: flex;
+  gap: 2rem;
+  justify-content: end;
+  height: 100%;
+  margin-top: 15px;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.create {
+    background-color:#2fd62f;
+    -moz-border-radius:4px;
+    -webkit-border-radius:4px;
+    border-radius:4px;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    color:#fafafa;
+    font-family:arial;
+    font-size:12px;
+    font-weight:bold;
+    padding:7px 24px;
+    text-decoration:none;
+    text-shadow:0px 0px 0px #70706f;
+}
+
+.create:hover {
+    background-color:#2fbf0f;
+}
+
+.create:active {
+    position:relative;
+    top:1px;
+}
